--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-reserve",
+  "name": "hoffer-ikea-clone",
   "version": "1.0.0",
-  "description": "Project for MERN Stack - The Complete Guide",
+  "description": "A fake shopping website using MERN stack.",
   "main": "index.js",
   "scripts": {
     "dev": "next",
